--- a/LibaryMS/App.config
+++ b/LibaryMS/App.config
@@ -3,8 +3,10 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="LMSConnectionString"
-            connectionString="Data Source=DESKTOP-KRCI0IE;Initial Catalog=LMS;User ID=LMS_admin;Password=admin2609"
+        <add name="LMSConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database1.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="LibaryMS.Properties.Settings.Database1ConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database1.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
